<resources>
    <string name="app_name">Tennis Statistic</string>
    <string name="new_game">New Game</string>
    <string name="menu_save">Save</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_delete">Delete saved files</string>
    <string name="menu_load">Load Game</string>
    <string name="title_activity_statistics">Statistics</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_statics">statics</string>
    <string name="section_format">Hello World from section: </string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_ts">Ts</string>
    <string name="title_activity_statistika">Statistika</string>
</resources>
